@@ -38,6 +38,6 @@ pragma Elaborate_All (System.Garlic.Options);
 
 package System.Garlic.Elaboration is
 
-   pragma Elaborate_Body;
+   procedure Initialize;
 
 end System.Garlic.Elaboration;
